# LLM-SPOT-Project

./: .gitignore  README.md  adapter_profiles.py  chat_tts_node.py  geminiAPI.py  mic_input_node.py  package.xml  record_audio.py  schema.json  setup.cfg  setup.py  voice_ai_pipeline.py  wav_input_node.py  wav_input_watcher_node.py
launch/: mic_input_node.launch.py  spot_ai_real_spot.launch.py  spot_ai_webots.launch.py  voice_webots.launch.py
ros2/spot_ai/: package.xml  setup.py
ros2/spot_ai/spot_ai/: chat_tts_node.py  geminiAPI.py  spot_schema_names.py  voice_ai_pipeline.py  wav_input_node.py
ros2/spot_ai/spot_ai/snippets/: __init__.py  stop.py
spot_ai/: adapter_profiles.py  chat_tts_node.py  geminiAPI.py  multi_camera_vision_node.py  safety_gate_node.py  safety_gate_real_spot_node.py  safety_gate_webots_node.py  schema_service_node.py  schema_service_real_spot_node.py  schema_service_webots_node.py  spot_schema_names.py  task_policy_node.py  vision_caption_node.py  voice_ai_pipeline.py  voice_ai_real_spot_node.py  voice_ai_webots_node.py  wav_input_node.py  wav_input_watcher_node.py
spot_ai/motor_schema/: __init__.py  arm_stow.py  arm_unstow.py  common.py  extend_arm.py  grasp_hand.py  release_hand.py  rotate_left.py  rotate_right.py  sit.py  stand.py  stop.py  walk_backward.py  walk_forward.py  walk_left.py  walk_right.py
spot_ai/perceptual_schema/: __init__.py  intent_router.py
